--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -1,13 +1,17 @@
 .project-images{
     display: flex;
     flex-direction: row;
-    overflow-y: scroll;
+    overflow-x: auto;
+    overflow-y: auto;
     width: 100%;
     height: 400px
 }
 
 .img-div{
-    padding: 10px;
+    margin: 10px;
     height: 100%;
+    width: auto;
+    border: solid lightgray 1px;
+    box-sizing: border-box;
  
 }
